# librcf

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cbindgen.toml
.github/workflows/: build.yml  release.yml
example/: main.c
include/: rcf.h
src/: lib.rs
tests/: example_test.rs
